// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migrateSettingsFolder returns an empty 'organization_settings' file and two empty folders 'users' and 'user_roles' when there is no settings folder 1`] = `
Object {
  "organization_settings": Object {
    "entry": Object {
      "content": "{}",
      "isDirectory": false,
      "owners": Array [
        "ROLE_CS_ROOT",
      ],
      "readers": Array [
        "ROLE_USER",
      ],
    },
  },
  "user_roles": Object {
    "entry": Object {
      "isDirectory": true,
      "owners": Array [
        "ROLE_CS_ROOT",
      ],
      "readers": Array [
        "ROLE_USER",
      ],
    },
  },
  "users": Object {
    "entry": Object {
      "isDirectory": true,
      "owners": Array [
        "ROLE_USER",
      ],
      "readers": Array [
        "ROLE_USER",
      ],
    },
  },
}
`;

exports[`migrateSettingsFolder returns the folders corresponding to the converted ActiveUI 4 settings folder, ready to be used by ActiveUI 5 1`] = `
Object {
  "organization_settings": Object {
    "entry": Object {
      "content": "{\\"theme\\":\\"light-activeviam\\"}",
      "owners": Array [
        "ROLE_CS_ROOT",
      ],
      "readers": Array [
        "ROLE_USER",
      ],
    },
  },
  "user_roles": Object {
    "children": Object {
      "ROLE_USER": Object {
        "children": Object {
          "settings": Object {
            "entry": Object {
              "content": "{\\"search.maxResults\\":7}",
              "owners": Array [
                "ROLE_USER",
              ],
              "readers": Array [
                "ROLE_USER",
              ],
            },
          },
        },
        "entry": Object {
          "canRead": true,
          "canWrite": true,
          "isDirectory": true,
          "lastEditor": "admin",
          "owners": Array [
            "ROLE_CS_ROOT",
          ],
          "readers": Array [
            "ROLE_USER",
          ],
          "timestamp": 1607879735685,
        },
      },
    },
    "entry": Object {
      "isDirectory": true,
      "owners": Array [
        "ROLE_CS_ROOT",
      ],
      "readers": Array [
        "ROLE_USER",
      ],
    },
  },
  "users": Object {
    "children": Object {
      "admin": Object {
        "children": Object {
          "activity": Object {
            "entry": Object {
              "content": "{\\"userFilters\\":[\\"[Geography].[City].[ALL].[AllMember].[Berlin]\\"]}",
              "owners": Array [
                "admin",
              ],
              "readers": Array [
                "admin",
              ],
            },
          },
          "settings": Object {
            "entry": Object {
              "content": "{\\"theme\\":\\"dark-activeviam\\",\\"search.maxResults\\":10,\\"userFilters.areEnabled\\":true}",
              "owners": Array [
                "admin",
              ],
              "readers": Array [
                "admin",
              ],
            },
          },
        },
        "entry": Object {
          "canRead": true,
          "canWrite": true,
          "isDirectory": true,
          "lastEditor": "admin",
          "owners": Array [
            "admin",
          ],
          "readers": Array [
            "admin",
          ],
          "timestamp": 1607879735685,
        },
      },
      "user1": Object {
        "children": Object {
          "activity": Object {
            "entry": Object {
              "content": "{}",
              "owners": Array [
                "user1",
              ],
              "readers": Array [
                "user1",
              ],
            },
          },
          "settings": Object {
            "entry": Object {
              "content": "{\\"userFilters.areEnabled\\":false}",
              "owners": Array [
                "user1",
              ],
              "readers": Array [
                "user1",
              ],
            },
          },
        },
        "entry": Object {
          "canRead": true,
          "canWrite": true,
          "isDirectory": true,
          "lastEditor": "admin",
          "owners": Array [
            "user1",
          ],
          "readers": Array [
            "user1",
          ],
          "timestamp": 1607879735685,
        },
      },
    },
    "entry": Object {
      "isDirectory": true,
      "owners": Array [
        "ROLE_USER",
      ],
      "readers": Array [
        "ROLE_USER",
      ],
    },
  },
}
`;
